# python-bootcamp

./: README.md
Lesson1/: exercise4.py  exercise7.py  exercise9.py  test.py
Lesson2/: calculator.py  exercise1.py  exercise5.py  test.py
Level1/: exercise1.py  exercise10.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise8.py  main.py  test.txt
Level2/: calculator.py  exercise2.py  exercise3.py  exercise4.py  main.py
Level3/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  main.py  test.json
Level4/: decorator_test.py  decorators.py  exercise1.py  exercise3.py  main.py  test.py
Level5/: MANIFEST.in  setup.cfg
Level5/flaskr/: api.py  views.py
Level5/flaskr/templates/: home.html
Project/: config.py  requirements.txt  wsgi.py
Project/flaskr/: __init__.py  api.py  app.py  commands.py  models.py  views.py
Project/flaskr/migrations/versions/: 3c7106c8417c_initial_migration.py
Project/flaskr/templates/: 400.html  404.html  500.html  home.html  layout.html
