[metadata]
version = 1.0.0
description = Level 5: Exercise 1 - Web app.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = requests:
include_package_data = true
install_requires =
    Flask
    requests

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests